# il2cpp_rs

./: .gitignore  Cargo.toml  Readme.md  UResolve.hpp
.cargo/: config.toml
.zed/: tasks.json
src/: console.rs  il2cpp_cache.rs  lib.rs  prof.rs
src/il2cpp/: il2cpp.rs  il2cpp_sys.rs  mod.rs  unityresolve.rs
src/il2cpp/classes/: arg.rs  array.rs  assembly.rs  class.rs  component.rs  field.rs  gameobject.rs  il2cpp_view.rs  itype.rs  method.rs  mod.rs  object.rs  string.rs  transform.rs  typ.rs  unity_object.rs
src/il2cpp/il2cpp_sys/: c_types.rs  fn_types.rs  mod.rs  win32_sys.rs
