[package]
name = "il2cpp_rs"
version = "0.1.0"
edition = "2024"
authors = ["https://github.com/ElCapor"]
description = "A library for interacting with il2cpp on Windows"
license = "GPL-3.0"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ElCapor/il2cpp_rs"
homepage = "https://github.com/ElCapor/il2cpp_rs"
keywords = ["il2cpp", "inject", "library", "unity", "hooking"]
categories = ["api-bindings", "development-tools::debugging", "unity"]

[dependencies]
windows = {version="0.62.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_LibraryLoader"]}
parking_lot = {version="0.12.5"}
